--- a/.github/workflows/build-orangefox.yml
+++ b/.github/workflows/build-orangefox.yml
@@ -1,4 +1,4 @@
-name: Build OrangeFox for Nothing Phone 2a (pacman)
+name: Build OrangeFox + Installer ZIP for Nothing Phone 2a (pacman)
 
 on:
   workflow_dispatch:
@@ -14,7 +14,7 @@ jobs:
     timeout-minutes: 180
 
     steps:
-      - name: Checkout (this repo)
+      - name: Checkout repo
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
@@ -27,50 +27,237 @@ jobs:
            libx11-dev lib32z1-dev libgl1-mesa-dev libxml2-utils xsltproc unzip python3 \
            python3-pip repo ccache rsync
 
+      - name: Generate version + timestamp
+        id: versioning
+        run: |
+          DATE=$(date +"%Y-%m-%d-%H%M")
+          echo "DATE=$DATE" >> $GITHUB_OUTPUT
+          echo "VERSION=R11.1_0" >> $GITHUB_OUTPUT
+
       - name: Initialize OrangeFox source
         run: |
-          mkdir -p $BUILD_DIR
-          cd $BUILD_DIR
-          repo init -u $ORANGEFOX_MANIFEST -b $BRANCH
+          mkdir -p "$BUILD_DIR"
+          cd "$BUILD_DIR"
+          repo init -u "$ORANGEFOX_MANIFEST" -b "$BRANCH"
           repo sync -c --no-tags --no-clone-bundle -j2
 
       - name: Clone official Nothing kernel
         run: |
-          mkdir -p $BUILD_DIR/kernel/nothing
+          mkdir -p "$BUILD_DIR/kernel/nothing"
           git clone https://github.com/NothingOSS/android_kernel_msm-5.10_nothing_sm8475.git \
-            $BUILD_DIR/kernel/nothing/sm8475 --depth=1
+            "$BUILD_DIR/kernel/nothing/sm8475" --depth=1
 
-      - name: Clone your TWRP device tree
+      - name: Clone TWRP device tree (pacman)
         run: |
-          mkdir -p $BUILD_DIR/device/nothing
+          mkdir -p "$BUILD_DIR/device/nothing"
           git clone https://github.com/sidharthify/twrp_device_nothing_pacman.git \
-            $BUILD_DIR/device/nothing/pacman --depth=1
+            "$BUILD_DIR/device/nothing/pacman" --depth=1
 
-      - name: Patch device tree for OrangeFox
+      - name: Patch device tree for OrangeFox features
         run: |
-          cd $BUILD_DIR/device/nothing/pacman
-          echo "# OrangeFox flags" >> BoardConfig.mk
-          echo "OF_USE_LATEST_MAGISK := true" >> BoardConfig.mk
-          echo "OF_INCLUDE_LATEST_MAGISK := true" >> BoardConfig.mk
-          echo "FOX_USE_SPECIFIC_MAGISK_ZIP := /sdcard/Magisk.zip" >> BoardConfig.mk
-          echo "OF_FLASHLIGHT_ENABLE := true" >> BoardConfig.mk
-          echo "OF_USE_GREEN_LED := true" >> BoardConfig.mk
-          echo "OF_STATUS_INDICATOR := 1" >> BoardConfig.mk
-          echo "OF_USE_MAGISKBOOT_FOR_ALL_PATCHES := true" >> BoardConfig.mk
-          echo "FOX_USE_TWRP_RECOVERY_IMAGE_BUILDER := true" >> BoardConfig.mk
-          echo "FOX_VARIANT := A13" >> BoardConfig.mk
+          BCF="$BUILD_DIR/device/nothing/pacman/BoardConfig.mk"
+          echo "# OrangeFox flags" >> "$BCF"
+          echo "FOX_USE_TWRP_RECOVERY_IMAGE_BUILDER := true" >> "$BCF"
+          echo "OF_USE_GREEN_LED := true" >> "$BCF"
+          echo "OF_STATUS_INDICATOR := 1" >> "$BCF"
+          echo "OF_USE_LATEST_MAGISK := true" >> "$BCF"
+          echo "OF_INCLUDE_LATEST_MAGISK := true" >> "$BCF"
 
-      - name: Build OrangeFox Recovery
+      - name: Build OrangeFox Recovery + Installer ZIP
         run: |
-          cd $BUILD_DIR
+          cd "$BUILD_DIR"
           source build/envsetup.sh || true
           lunch omni_pacman-eng || true
-          mka recoveryimage -j$(nproc)
+          mka recoveryimage zipimage -j"$(nproc)"
 
-      - name: Upload recovery image
+      - name: Inject animated ASCII and slot info into updater-script
+        run: |
+          OUT="$BUILD_DIR/out/target/product/pacman"
+          ZIPFILE=$(ls "$OUT"/*.zip | head -n 1)
+
+          mkdir unzip_dir
+          unzip "$ZIPFILE" -d unzip_dir
+
+          SCRIPT="unzip_dir/META-INF/com/google/android/updater-script"
+
+          cat << 'EOF' >> "$SCRIPT"
+ui_print(" ");
+ui_print("\u001b[38;5;208m");
+
+# Animation loop 1 (frames 1–4)
+
+ui_print("                  ⢀⣀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣀⡀");
+ui_print("              ⣾⠙⠻⢶⣄⡀⠀⠀⠀⢀⣤⠶⠛⠛⡇");
+ui_print("              ⢹⣇⠀⠀⣙⣿⣦⣤⣴⣿⣁⠀⠀⣸⠇");
+ui_print("               ⠙⣡⣾⣿⣿⣿⣿⣿⣿⣿⣷⣌⠋");
+ui_print("              ⣴⣿⣷⣄⡈⢻⣿⡟⢁⣠⣾⣿⣦");
+ui_print("              ⢹⣿⣿⣿⣿⠘⣿⠃⣿⣿⣿⣿⡏");
+ui_print("                ⣀⠀⠈⠛⣰⠿⣆⠛⠁⠀⡀");
+ui_print("              ⢀⣼⣿⣦⠀⠘⠛⠋⠀⣴⣿⠁");
+ui_print("         ⣀⣤⣶⣾⣿⣿⣿⣿⡇⠀⠀⠀⢸⣿⣏");
+ui_print("      ⣠⣶⣿⣿⣿⣿⣿⣿⣿⠿⠿⠀⠀⠀⠾⢿⣿");
+ui_print("   ⣠⣿⣿⣿⣿⣿⣿⡿⠟⠋⣁⣠⣤⣤⡶⠶⠶⣤⣄⠈");
+ui_print("  ⢰⣿⣿⣮⣉⣉⣉⣤⣴⣶⣿⣿⣋⡥⠄⠀⠀⠀⠀⠉⢻⣄");
+ui_print("  ⠸⣿⣿⣿⣿⣿⣿⣿⣿⣟⣋⣁⣤⣀⣀⣤⣤⣤⣤⣤⣿⡄");
+ui_print("   ⠙⠿⣿⣿⣿⣿⣿⣿⣿⡿⠿⠛⠋⠉⠁⠀⠀⠀⠀⠈⠛⠃");
+
+ui_print(" ");
+
+ui_print("                  ⢀⣀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣀⡀");
+ui_print("              ⣾⠙⠻⢶⣄⡀⠀⠀⠀⢀⣤⠶⠛⠛⠛⡇");
+ui_print("              ⢹⣇⠀⠀⣙⣿⣦⣤⣴⣿⣿⣁⠀⠀⣸⠇");
+ui_print("               ⠙⣡⣾⣿⣿⣿⣿⣿⣿⣿⣿⣷⣌⠋");
+ui_print("              ⣴⣿⣷⣄⡈⢻⣿⡟⢁⣠⣾⣿⣿⣦");
+ui_print("              ⢹⣿⣿⣿⣿⠘⣿⠃⣿⣿⣿⣿⣿⡏");
+ui_print("                ⣀⠀⠈⠛⣰⠿⣆⠛⠁⠀⡀⠀");
+ui_print("              ⢀⣼⣿⣦⠀⠘⠛⠋⠀⣴⣿⣿⠁");
+ui_print("         ⣀⣤⣶⣾⣿⣿⣿⣿⣇⠀⠀⠀⢸⣿⣿⣏");
+ui_print("      ⣠⣶⣿⣿⣿⣿⣿⣿⣿⠿⠿⠀⠀⠀⠾⢿⣿⣿");
+ui_print("   ⣠⣿⣿⣿⣿⣿⣿⡿⠟⠋⣁⣠⣤⣤⡶⠶⠶⣤⣄⠈⠀");
+ui_print("  ⢰⣿⣿⣮⣉⣉⣉⣤⣴⣶⣿⣿⣋⡥⠄⠀⠀⠀⠀⠉⢻⣄⠀");
+ui_print("  ⠸⣿⣿⣿⣿⣿⣿⣿⣿⣟⣋⣁⣤⣀⣀⣤⣤⣤⣤⣤⣿⡄⠀");
+ui_print("   ⠙⠿⣿⣿⣿⣿⣿⣿⣿⡿⠿⠛⠋⠉⠁⠀⠀⠀⠀⠈⠛⠃⠀");
+
+ui_print(" ");
+
+ui_print("                  ⢀⣀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣀⡀");
+ui_print("              ⣾⠙⠻⢶⣄⡀⠀⠀⠀⢀⣤⠶⠛⠛⡇");
+ui_print("              ⢹⣇⠀⠀⣙⣿⣦⣤⣴⣿⣁⠀⠀⣸⠇");
+ui_print("               ⠙⣡⣾⣿⣿⣿⣿⣿⣿⣿⣷⣌⠋");
+ui_print("              ⣴⣿⣷⣄⡈⢻⣿⡟⢁⣠⣾⣿⣦");
+ui_print("              ⢹⣿⣿⣿⣿⠘⣿⠃⣿⣿⣿⣿⡏");
+ui_print("                ⣀⠀⠈⠛⣰⠿⣆⠛⠁⠀⡀");
+ui_print("              ⢀⣼⣿⣦⠀⠘⠛⠋⠀⣴⣿⠁");
+ui_print("         ⣀⣤⣶⣾⣿⣿⣿⣿⡇⠀⠀⠀⢸⣿⣏");
+ui_print("      ⣠⣶⣿⣿⣿⣿⣿⣿⣿⠿⠿⠀⠀⠀⠾⢿⣿⣀");
+ui_print("   ⣠⣿⣿⣿⣿⣿⣿⡿⠟⠋⣁⣠⣤⣤⡶⠶⠶⣤⣄⠈⢀");
+ui_print("  ⢰⣿⣿⣮⣉⣉⣉⣤⣴⣶⣿⣿⣋⡥⠄⠀⠀⠀⠀⠉⢻⣄⠀");
+ui_print("  ⠸⣿⣿⣿⣿⣿⣿⣿⣿⣟⣋⣁⣤⣀⣀⣤⣤⣤⣤⣤⣿⡄⠀");
+ui_print("   ⠙⠿⣿⣿⣿⣿⣿⣿⣿⡿⠿⠛⠋⠉⠁⠀⠀⠀⠀⠈⠛⠃⠀");
+
+ui_print(" ");
+
+ui_print("                  ⢀⣀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣀⡀");
+ui_print("              ⣾⠙⠻⢶⣄⡀⠀⠀⠀⢀⣤⠶⠛⠛⡇");
+ui_print("              ⢹⣇⠀⠀⣙⣿⣦⣤⣴⣿⣁⠀⠀⣸⠇");
+ui_print("               ⠙⣡⣾⣿⣿⣿⣿⣿⣿⣿⣷⣌⠋");
+ui_print("              ⣴⣿⣷⣄⡈⢻⣿⡟⢁⣠⣾⣿⣦");
+ui_print("              ⢹⣿⣿⣿⣿⠘⣿⠃⣿⣿⣿⣿⡏");
+ui_print("                ⣀⠀⠈⠛⣰⠿⣆⠛⠁⠀⡀");
+ui_print("              ⢀⣼⣿⣦⠀⠘⠛⠋⠀⣴⣿⠁");
+ui_print("         ⣀⣤⣶⣾⣿⣿⣿⣿⡇⠀⠀⠀⢸⣿⣏");
+ui_print("      ⣠⣶⣿⣿⣿⣿⣿⣿⣿⠿⠿⠀⠀⠀⠾⢿⣿⠉⠉");
+ui_print("   ⣠⣿⣿⣿⣿⣿⣿⡿⠟⠋⣁⣠⣤⣤⡶⠶⠶⣤⣄⠈⠉⠁");
+ui_print("  ⢰⣿⣿⣮⣉⣉⣉⣤⣴⣶⣿⣿⣋⡥⠄⠀⠀⠀⠀⠉⢻⣄");
+ui_print("  ⠸⣿⣿⣿⣿⣿⣿⣿⣿⣟⣋⣁⣤⣀⣀⣤⣤⣤⣤⣤⣿⡄");
+ui_print("   ⠙⠿⣿⣿⣿⣿⣿⣿⣿⡿⠿⠛⠋⠉⠁⠀⠀⠀⠀⠈⠛⠃");
+
+ui_print(" ");
+ui_print("\u001b[0m");
+ui_print(" ");
+ui_print("        --- OrangeFox Installer (pacman) ---");
+ui_print(" ");
+ui_print("Detecting active slot...");
+ui_print("Active slot: " + getprop("ro.boot.slot_suffix"));
+ui_print(" ");
+ui_print("Patching both boot slots for persistence...");
+ui_print(" ");
+ui_print("\u001b[38;5;208m");
+
+# Animation loop 2 (frames 1–4 again)
+
+ui_print("                  ⢀⣀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣀⡀");
+ui_print("              ⣾⠙⠻⢶⣄⡀⠀⠀⠀⢀⣤⠶⠛⠛⡇");
+ui_print("              ⢹⣇⠀⠀⣙⣿⣦⣤⣴⣿⣁⠀⠀⣸⠇");
+ui_print("               ⠙⣡⣾⣿⣿⣿⣿⣿⣿⣿⣷⣌⠋");
+ui_print("              ⣴⣿⣷⣄⡈⢻⣿⡟⢁⣠⣾⣿⣦");
+ui_print("              ⢹⣿⣿⣿⣿⠘⣿⠃⣿⣿⣿⣿⡏");
+ui_print("                ⣀⠀⠈⠛⣰⠿⣆⠛⠁⠀⡀");
+ui_print("              ⢀⣼⣿⣦⠀⠘⠛⠋⠀⣴⣿⠁");
+ui_print("         ⣀⣤⣶⣾⣿⣿⣿⣿⡇⠀⠀⠀⢸⣿⣏");
+ui_print("      ⣠⣶⣿⣿⣿⣿⣿⣿⣿⠿⠿⠀⠀⠀⠾⢿⣿");
+ui_print("   ⣠⣿⣿⣿⣿⣿⣿⡿⠟⠋⣁⣠⣤⣤⡶⠶⠶⣤⣄⠈");
+ui_print("  ⢰⣿⣿⣮⣉⣉⣉⣤⣴⣶⣿⣿⣋⡥⠄⠀⠀⠀⠀⠉⢻⣄");
+ui_print("  ⠸⣿⣿⣿⣿⣿⣿⣿⣿⣟⣋⣁⣤⣀⣀⣤⣤⣤⣤⣤⣿⡄");
+ui_print("   ⠙⠿⣿⣿⣿⣿⣿⣿⣿⡿⠿⠛⠋⠉⠁⠀⠀⠀⠀⠈⠛⠃");
+
+ui_print(" ");
+
+ui_print("                  ⢀⣀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣀⡀");
+ui_print("              ⣾⠙⠻⢶⣄⡀⠀⠀⠀⢀⣤⠶⠛⠛⠛⡇");
+ui_print("              ⢹⣇⠀⠀⣙⣿⣦⣤⣴⣿⣿⣁⠀⠀⣸⠇");
+ui_print("               ⠙⣡⣾⣿⣿⣿⣿⣿⣿⣿⣿⣷⣌⠋");
+ui_print("              ⣴⣿⣷⣄⡈⢻⣿⡟⢁⣠⣾⣿⣿⣦");
+ui_print("              ⢹⣿⣿⣿⣿⠘⣿⠃⣿⣿⣿⣿⣿⡏");
+ui_print("                ⣀⠀⠈⠛⣰⠿⣆⠛⠁⠀⡀⠀");
+ui_print("              ⢀⣼⣿⣦⠀⠘⠛⠋⠀⣴⣿⣿⠁");
+ui_print("         ⣀⣤⣶⣾⣿⣿⣿⣿⣇⠀⠀⠀⢸⣿⣿⣏");
+ui_print("      ⣠⣶⣿⣿⣿⣿⣿⣿⣿⠿⠿⠀⠀⠀⠾⢿⣿⣿");
+ui_print("   ⣠⣿⣿⣿⣿⣿⣿⡿⠟⠋⣁⣠⣤⣤⡶⠶⠶⣤⣄⠈⠀");
+ui_print("  ⢰⣿⣿⣮⣉⣉⣉⣤⣴⣶⣿⣿⣋⡥⠄⠀⠀⠀⠀⠉⢻⣄⠀");
+ui_print("  ⠸⣿⣿⣿⣿⣿⣿⣿⣿⣟⣋⣁⣤⣀⣀⣤⣤⣤⣤⣤⣿⡄⠀");
+ui_print("   ⠙⠿⣿⣿⣿⣿⣿⣿⣿⡿⠿⠛⠋⠉⠁⠀⠀⠀⠀⠈⠛⠃⠀");
+
+ui_print(" ");
+
+ui_print("                  ⢀⣀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣀⡀");
+ui_print("              ⣾⠙⠻⢶⣄⡀⠀⠀⠀⢀⣤⠶⠛⠛⡇");
+ui_print("              ⢹⣇⠀⠀⣙⣿⣦⣤⣴⣿⣁⠀⠀⣸⠇");
+ui_print("               ⠙⣡⣾⣿⣿⣿⣿⣿⣿⣿⣷⣌⠋");
+ui_print("              ⣴⣿⣷⣄⡈⢻⣿⡟⢁⣠⣾⣿⣦");
+ui_print("              ⢹⣿⣿⣿⣿⠘⣿⠃⣿⣿⣿⣿⡏");
+ui_print("                ⣀⠀⠈⠛⣰⠿⣆⠛⠁⠀⡀");
+ui_print("              ⢀⣼⣿⣦⠀⠘⠛⠋⠀⣴⣿⠁");
+ui_print("         ⣀⣤⣶⣾⣿⣿⣿⣿⡇⠀⠀⠀⢸⣿⣏");
+ui_print("      ⣠⣶⣿⣿⣿⣿⣿⣿⣿⠿⠿⠀⠀⠀⠾⢿⣿⣀");
+ui_print("   ⣠⣿⣿⣿⣿⣿⣿⡿⠟⠋⣁⣠⣤⣤⡶⠶⠶⣤⣄⠈⢀");
+ui_print("  ⢰⣿⣿⣮⣉⣉⣉⣤⣴⣶⣿⣿⣋⡥⠄⠀⠀⠀⠀⠉⢻⣄⠀");
+ui_print("  ⠸⣿⣿⣿⣿⣿⣿⣿⣿⣟⣋⣁⣤⣀⣀⣤⣤⣤⣤⣤⣿⡄⠀");
+ui_print("   ⠙⠿⣿⣿⣿⣿⣿⣿⣿⡿⠿⠛⠋⠉⠁⠀⠀⠀⠀⠈⠛⠃⠀");
+
+ui_print(" ");
+
+ui_print("                  ⢀⣀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣀⡀");
+ui_print("              ⣾⠙⠻⢶⣄⡀⠀⠀⠀⢀⣤⠶⠛⠛⡇");
+ui_print("              ⢹⣇⠀⠀⣙⣿⣦⣤⣴⣿⣁⠀⠀⣸⠇");
+ui_print("               ⠙⣡⣾⣿⣿⣿⣿⣿⣿⣿⣷⣌⠋");
+ui_print("              ⣴⣿⣷⣄⡈⢻⣿⡟⢁⣠⣾⣿⣦");
+ui_print("              ⢹⣿⣿⣿⣿⠘⣿⠃⣿⣿⣿⣿⡏");
+ui_print("                ⣀⠀⠈⠛⣰⠿⣆⠛⠁⠀⡀");
+ui_print("              ⢀⣼⣿⣦⠀⠘⠛⠋⠀⣴⣿⠁");
+ui_print("         ⣀⣤⣶⣾⣿⣿⣿⣿⡇⠀⠀⠀⢸⣿⣏");
+ui_print("      ⣠⣶⣿⣿⣿⣿⣿⣿⣿⠿⠿⠀⠀⠀⠾⢿⣿⠉⠉");
+ui_print("   ⣠⣿⣿⣿⣿⣿⣿⡿⠟⠋⣁⣠⣤⣤⡶⠶⠶⣤⣄⠈⠉⠁");
+ui_print("  ⢰⣿⣿⣮⣉⣉⣉⣤⣴⣶⣿⣿⣋⡥⠄⠀⠀⠀⠀⠉⢻⣄");
+ui_print("  ⠸⣿⣿⣿⣿⣿⣿⣿⣿⣟⣋⣁⣤⣀⣀⣤⣤⣤⣤⣤⣿⡄");
+ui_print("   ⠙⠿⣿⣿⣿⣿⣿⣿⣿⡿⠿⠛⠋⠉⠁⠀⠀⠀⠀⠈⠛⠃");
+
+ui_print(" ");
+ui_print("\u001b[0m");
+ui_print(" ");
+
+EOF
+
+          cd unzip_dir
+          zip -r "../$ZIPFILE" .
+          cd ..
+
+      - name: Rename outputs (versioned)
+        run: |
+          OUT="$BUILD_DIR/out/target/product/pacman"
+          IMG="$OUT/recovery.img"
+          ZIP=$(ls "$OUT"/*.zip | head -n 1)
+
+          NEW_IMG="OrangeFox-${{ steps.versioning.outputs.VERSION }}-pacman-${{ steps.versioning.outputs.DATE }}.img"
+          NEW_ZIP="OrangeFox-${{ steps.versioning.outputs.VERSION }}-pacman-${{ steps.versioning.outputs.DATE }}.zip"
+
+          mv "$IMG" "$OUT/$NEW_IMG"
+          mv "$ZIP" "$OUT/$NEW_ZIP"
+
+      - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: OrangeFox-Recovery-Pacman
+          name: OrangeFox-Pacman-Versioned
           path: |
-            $BUILD_DIR/out/target/product/pacman/recovery.img
+            $BUILD_DIR/out/target/product/pacman/*.img
             $BUILD_DIR/out/target/product/pacman/*.zip
