--- a/.github/workflows/build-orangefox.yml
+++ b/.github/workflows/build-orangefox.yml
@@ -28,13 +28,16 @@ jobs:
             exit 1
           fi
 
-      - name: Install build dependencies
+      - name: Install build dependencies (Ubuntu 24.04 fixed)
         run: |
+          sudo dpkg --add-architecture i386
           sudo apt update
-          sudo apt install -y git-core gnupg flex bison build-essential zip curl zlib1g-dev \
-           gcc-multilib g++-multilib libc6-dev-i386 lib32ncurses5-dev x11proto-core-dev \
-           libx11-dev lib32z1-dev libgl1-mesa-dev libxml2-utils xsltproc unzip python3 \
-           python3-pip repo ccache rsync
+          sudo apt install -y \
+            git-core gnupg flex bison build-essential zip curl zlib1g-dev \
+            gcc-multilib g++-multilib libc6-dev-i386 lib32z1-dev \
+            x11proto-core-dev libx11-dev libgl1-mesa-dev libxml2-utils \
+            xsltproc unzip python3 python3-pip repo ccache rsync \
+            libncurses5-dev:i386 lib32ncurses6
 
       - name: Generate version + timestamp
         id: versioning
@@ -65,6 +68,7 @@ jobs:
       - name: Patch device tree for OrangeFox + OTA
         run: |
           BCF="$BUILD_DIR/device/nothing/pacman/BoardConfig.mk"
+
           echo "" >> "$BCF"
           echo "# OrangeFox Base Flags" >> "$BCF"
           echo "FOX_USE_TWRP_RECOVERY_IMAGE_BUILDER := true" >> "$BCF"
@@ -72,6 +76,7 @@ jobs:
           echo "OF_STATUS_INDICATOR := 1" >> "$BCF"
           echo "OF_USE_LATEST_MAGISK := true" >> "$BCF"
           echo "OF_INCLUDE_LATEST_MAGISK := true" >> "$BCF"
+
           echo "" >> "$BCF"
           echo "# OTA Flags" >> "$BCF"
           echo "OF_USE_UPDATE_CHANNEL := 1" >> "$BCF"
